5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4129/executions/1575_996.log
== TEST (2019-03-12 11:19:59) 
-- CODE:

  print("*****")
print("(* o o *)")
 print("*  ^  *")
print ("* --- *")
  print("*****")
-- ERROR:
File "XXXX", line 2
    print("*****")
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:20:18) 
-- CODE:
  print("*****")
print("(* o o *)")
 print("*  ^  *")
print ("* --- *")
  print("*****")
  
-- ERROR:
File "XXXX", line 1
    print("*****")
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:20:34) 
-- CODE:
print("*****")
print("(* o o *)")
print("*  ^  *")
print ("* --- *")
print("*****")
  
-- OUTPUT:
*****
(* o o *)
*  ^  *
* --- *
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:21:11) 
-- CODE:
print("*****")
print("(* o o *)")
print("*  ^  *")
print ("* --- *")
print("*****")
  
-- EXECUTION TIME:
0.113973
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
(* o o *)
*  ^  *
* --- *
*****
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
